--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/ejs": "^3.1.5",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express-ejs-layouts": "^2.5.1",
